# robotica-tp-final

./: .gitignore  COMANDOS_LABO_CLONAR.md  COMANDOS_ROSBAG_TB4.md  GUIA_ROBOT_REAL.md  HISTORIAL.md  PLAN_LABO_TB4_2026-07-02.md  README.md  rviz_rosbag_laberinto.rviz  subocosas
scripts/: run_nav_goal_suite.sh  run_nav_gridmap_smoke.sh  run_rosbag_cones_check.sh
slam_gridmap/: package.xml  verificar_entorno.sh
slam_gridmap/config/: params.yaml
slam_gridmap/rviz/: slam_gridmap.rviz
slam_gridmap/slam_gridmap/: likelihood_field.py  motion_model.py  occupancy_grid.py
src/nav_gridmap/: README.md  package.xml  setup.cfg  setup.py
src/nav_gridmap/config/: localization.yaml  navigation.yaml  perception.yaml
src/nav_gridmap/launch/: localization.launch.py  navigation.launch.py  red_cone_mission.launch.py
src/nav_gridmap/maps/: mapa_fastslam_final_v2.yaml  mapa_fastslam_final_v2_nav.pgm  mapa_fastslam_final_v2_nav.yaml  mapa_fastslam_horizontal_sofa_nav.pgm  mapa_fastslam_horizontal_sofa_nav.yaml
src/nav_gridmap/nav_gridmap/: controller.py  mcl.py  mcl_node.py  navigator_node.py  obstacle.py  planner.py  red_cone_mission_node.py  red_cone_vision.py  static_map.py
src/nav_gridmap/rviz/: localization.rviz  navigation.rviz
src/nav_gridmap/test/: test_mcl_localization.py  test_navigation.py  test_red_cone_vision.py
src/slam_gridmap/: README.md  setup.py
src/slam_gridmap/config/: params.yaml
src/slam_gridmap/launch/: casa_headless.launch.py  casa_obs_headless.launch.py  slam_gridmap.launch.py
src/slam_gridmap/maps/: mapa_fastslam_final_v2.pgm  mapa_fastslam_horizontal_sofa.yaml
src/slam_gridmap/slam_gridmap/: grid_fastslam_core.py  grid_fastslam_node.py  occupancy_grid.py  resampling.py
src/slam_gridmap/test/: test_grid_fastslam_sim.py  test_occupancy_grid.py
