<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_gridmap</name>
  <version>0.1.0</version>
  <description>
    Parte A del TP Final (I-402): Grid-Based FastSLAM (Opcion 1).
    Construye un mapa de ocupacion con un filtro de particulas donde cada
    particula mantiene su propio mapa, usando likelihood fields para la
    localizacion. Probado con TurtleBot3 en Gazebo (ROS 2 Humble).
  </description>
  <maintainer email="vlynch@udesa.edu.ar">Toia</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
